@@ -33,7 +33,6 @@ import org.json.JSONException;
 import org.json.JSONObject;
 import xyz.zedler.patrick.grocy.Constants;
 import xyz.zedler.patrick.grocy.Constants.ARGUMENT;
-import xyz.zedler.patrick.grocy.Constants.PREF;
 import xyz.zedler.patrick.grocy.Constants.SETTINGS.APPEARANCE;
 import xyz.zedler.patrick.grocy.Constants.SETTINGS.BEHAVIOR;
 import xyz.zedler.patrick.grocy.Constants.SETTINGS.NETWORK;
@@ -64,6 +63,7 @@ import xyz.zedler.patrick.grocy.model.ShoppingList;
 import xyz.zedler.patrick.grocy.repository.MainRepository;
 import xyz.zedler.patrick.grocy.util.ConfigUtil;
 import xyz.zedler.patrick.grocy.util.NumUtil;
+import xyz.zedler.patrick.grocy.util.PrefsUtil;
 import xyz.zedler.patrick.grocy.util.ReminderUtil;
 import xyz.zedler.patrick.grocy.util.SortUtil;
 import xyz.zedler.patrick.grocy.util.VersionUtil;
@@ -1079,38 +1079,7 @@ public class SettingsViewModel extends BaseViewModel {
   }
 
   public void clearServerRelatedSharedPreferences() {
-    SharedPreferences.Editor editPrefs = sharedPrefs.edit();
-    editPrefs.remove(PREF.DB_LAST_TIME_STOCK_ITEMS);
-    editPrefs.remove(PREF.DB_LAST_TIME_STORES);
-    editPrefs.remove(PREF.DB_LAST_TIME_LOCATIONS);
-    editPrefs.remove(PREF.DB_LAST_TIME_SHOPPING_LIST_ITEMS);
-    editPrefs.remove(PREF.DB_LAST_TIME_SHOPPING_LISTS);
-    editPrefs.remove(PREF.DB_LAST_TIME_PRODUCT_GROUPS);
-    editPrefs.remove(PREF.DB_LAST_TIME_QUANTITY_UNITS);
-    editPrefs.remove(PREF.DB_LAST_TIME_QUANTITY_UNIT_CONVERSIONS);
-    editPrefs.remove(PREF.DB_LAST_TIME_QUANTITY_UNIT_CONVERSIONS_RESOLVED);
-    editPrefs.remove(PREF.DB_LAST_TIME_PRODUCTS);
-    editPrefs.remove(PREF.DB_LAST_TIME_PRODUCTS_LAST_PURCHASED);
-    editPrefs.remove(PREF.DB_LAST_TIME_PRODUCTS_AVERAGE_PRICE);
-    editPrefs.remove(PREF.DB_LAST_TIME_PRODUCT_BARCODES);
-    editPrefs.remove(PREF.DB_LAST_TIME_VOLATILE);
-    editPrefs.remove(PREF.DB_LAST_TIME_VOLATILE_MISSING);
-    editPrefs.remove(PREF.DB_LAST_TIME_TASKS);
-    editPrefs.remove(PREF.DB_LAST_TIME_TASK_CATEGORIES);
-    editPrefs.remove(PREF.DB_LAST_TIME_CHORES);
-    editPrefs.remove(PREF.DB_LAST_TIME_CHORE_ENTRIES);
-    editPrefs.remove(PREF.DB_LAST_TIME_USERS);
-
-    editPrefs.remove(PREF.HOME_ASSISTANT_INGRESS_SESSION_KEY);
-    editPrefs.remove(PREF.HOME_ASSISTANT_INGRESS_SESSION_KEY_TIME);
-    editPrefs.remove(PREF.SERVER_URL);
-    editPrefs.remove(PREF.HOME_ASSISTANT_SERVER_URL);
-    editPrefs.remove(PREF.HOME_ASSISTANT_LONG_LIVED_TOKEN);
-    editPrefs.remove(PREF.API_KEY);
-    editPrefs.remove(PREF.SHOPPING_LIST_LAST_ID);
-    editPrefs.remove(PREF.GROCY_VERSION);
-    editPrefs.remove(PREF.CURRENT_USER_ID);
-    editPrefs.apply();
+    PrefsUtil.clearServerRelatedSharedPreferences(sharedPrefs);
   }
 
   @Override
